2022-04-01 [1.6.27 (build 37)]
 * Добавлена оплата банковской картой.
 * В раздел меню добавлен обмен бонусов.
 * Исправлен визуальный баг в чате для Android 11+.
 * Мелкие исправления.


2022-02-17 [1.6.26 (build 36)]
  * Проект переведён на Jetpack View Binding.
  * Устранена зависимость от репозитория JCenter.
  * Обновлено большинство модулей, от которых зависит проект.
  * Добавлен переключатель: Меню -> Настройки адресов -> Выбранный адрес -> Настройки адреса -> Домофон -> Громкая связь.
    Эта опция автоматически включает громкую связь после нажатия кнопки "Ответить" на входящий звонок с вызывной панели домофона.
  * Мелкие исправления.


2022-01-24 [1.6.25 (build 35)]
  * Добавлены ограничения на выбор даты и времени в запросе происшествий городских камер.