@@ -6,11 +6,11 @@ buildscript {
         compileSdkVersion = 31
         minSdkVersion = 21
         targetSdkVersion = 30
-        kotlinVersion = '1.6.10'
-        kotlinReflect = '1.6.10'
+        kotlinVersion = '1.6.21'
+        kotlinReflect = '1.6.21'
         appCompatVersion = '1.4.1'
         coreKtxVersion = '1.7.0'
-        constraintLayoutVersion = '2.1.3'
+        constraintLayoutVersion = '2.1.4'
         junitVersion = '4.13.2'
         extJunitVersion = '1.1.0'
         espressoCoreVersion = '3.2.0'
@@ -19,10 +19,10 @@ buildscript {
         firebaseMessagingVersion = '21.1.0'
         timberVersion = '4.7.1'
         navigationVersion = "2.2.2"
-        roomVersion = '2.4.1'
+        roomVersion = '2.4.2'
         coroutinesVersion = '1.6.0'
         retrofitVersion = '2.6.0'
-        okHttpVersion = '4.9.1'
+        okHttpVersion = '4.9.2'
         ktlintVersion = '0.37.2'
         archCoreVersion = '2.0.1'
         pagingVersion = '1.0.1'
@@ -40,7 +40,7 @@ buildscript {
         openStreetMapVersion = '6.1.5'
         swipeLayout = '1.1.0'
         inputMask = '5.0.0'
-        materialMaterial = '1.5.0'
+        materialMaterial = '1.6.0'
         kotlinCodegen = '1.11.0'
         cameraxVersion = '1.0.0-alpha02'
         viewpagerVersion = '1.0.0'
@@ -51,7 +51,7 @@ buildscript {
         playServicesLocation = '19.0.1'
         dexter = '6.2.2'
         playServicesWallet = '19.1.0'
-        exoPlayer = '2.13.3'
+        exoPlayer = '2.14.2'
         mobmetricalib = '3.13.1'
         installreferrer = '2.2'
         recyclerView = '1.2.1'
@@ -64,11 +64,11 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.1'
+        classpath 'com.android.tools.build:gradle:7.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath 'com.google.gms:google-services:4.3.10'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0-alpha02"
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.0'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0-rc01"
         classpath "io.insert-koin:koin-gradle-plugin:$koin_version"
     }
 }
@@ -76,7 +76,7 @@ buildscript {
 configurations.all { resolutionStrategy { force "org.jetbrains.kotlin:kotlin-reflect:1.6.10" } }
 
 allprojects {
-    apply from: "$rootDir/ktlint.gradle"
+    //apply from: "$rootDir/ktlint.gradle"
     repositories {
         google()
         maven { url 'https://jitpack.io' }
