@@ -6,5 +6,6 @@ data class ParentModel(
     val addressTitle: String = "",
     val houseId: Int = 0,
     val children: List<DisplayableItem>,
-    val hasYards: Boolean = false  // для сортировки списка адресов (если есть что открывать, то такие адреса идут в начале списка)
+    val hasYards: Boolean = false,  // для сортировки списка адресов (если есть что открывать, то такие адреса идут в начале списка)
+    var isExpanded: Boolean = false  // развернут ли адрес
 ) : DisplayableItem
