@@ -139,18 +139,6 @@ class ExtWebViewFragment : Fragment() {
                 return true
             }
 
-            override fun shouldInterceptRequest(
-                view: WebView?,
-                request: WebResourceRequest?
-            ): WebResourceResponse? {
-                return if (request?.url?.path?.endsWith("lanta.js") == true) {
-                    WebResourceResponse("text/javascript", "utf-8",
-                        ByteArrayInputStream(ExtWebInterface.JS_INJECTION.toByteArray()))
-                } else {
-                    super.shouldInterceptRequest(view, request)
-                }
-            }
-
             override fun onPageStarted(view: WebView?, url: String?, favicon: Bitmap?) {
                 super.onPageStarted(view, url, favicon)
                 Timber.d("debug_web pageStarted = $url")
@@ -187,7 +175,9 @@ class ExtWebViewFragment : Fragment() {
         }
 
         binding.ivEWVBack.setOnClickListener {
-            goBack()
+            if (!goBack()) {
+                findNavController().popBackStack()
+            }
         }
 
         binding.wvExt.clearCache(true)
