@@ -1,3 +1,15 @@
+2022-05-31 [1.6.29 (build 39)]
+ * Исправлена навигация назад в бонусах.
+ * Убран "костыль" с lanta.js в WebView.
+ * Теперь при возврате назад к списку адресов они остаются развёрнутыми.
+ * Теперь при старте приложения первый адрес в списке разворачивается.
+ * Теперь при вводе имени и отчества первая буква предпочитает быть заглавной.
+ * Исправлено обновление приложения для случая "upgrade".
+ * В архиве исправлена некорректная перемотка при двойном тапе для случая, когда интервал архива содержит пропуски.
+ * Отключён ktlint, так как с ним перестал собираться проект из-за недоступности для скачивания некоторых ссылок.
+ * Обновлены версии некоторых используемых проектом компонент.
+
+
 2022-04-01 [1.6.27 (build 37)]
  * Добавлена оплата банковской картой.
  * В раздел меню добавлен обмен бонусов.
